--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,12 +1,12 @@
 Package: mcmcse
-Version: 1.3-3
-Date: 2018-03-09
+Version: 1.3-4
+Date: 2019-12-23
 Title: Monte Carlo Standard Errors for MCMC
 Author: James M. Flegal <jflegal@ucr.edu>, 
 	John Hughes <j.hughes@ucdenver.edu>, 
-	Dootika Vats <D.Vats@warwick.ac.uk>, and 
+	Dootika Vats <dootika@iitk.ac.in>, and 
 	Ning Dai <daixx224@umn.edu>
-Maintainer: Dootika Vats <D.Vats@warwick.ac.uk>
+Maintainer: Dootika Vats <dootika@iitk.ac.in>
 Imports: utils, ellipse, Rcpp (>= 0.12.10)
 LinkingTo: Rcpp, RcppArmadillo
 Suggests: testthat, mAr, knitr
@@ -19,7 +19,7 @@ Description: Provides tools for computing Monte Carlo standard
 License: GPL (>= 2)
 URL: http://faculty.ucr.edu/~jflegal ,
         http://johnhughes.org,
-	http://www2.warwick.ac.uk/fac/sci/statistics/crism/visitors/vats
+	http://home.iitk.ac.in/~dootika/
 VignetteBuilder: knitr
 Repository:CRAN
 
