some annoying changes

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -22,4 +22,4 @@ URL: http://faculty.ucr.edu/~jflegal ,
 	http://home.iitk.ac.in/~dootika/
 VignetteBuilder: knitr
 Repository:CRAN
-
+Encoding: UTF-8
