--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,13 +1,14 @@
 Package: mcmcse
-Version: 1.4-2
-Date: 2020-02-20
+Version: 1.4-3
+Date: 2020-04-22
 Title: Monte Carlo Standard Errors for MCMC
 Author: James M. Flegal <jflegal@ucr.edu>, 
 	John Hughes <j.hughes@ucdenver.edu>, 
-	Dootika Vats <dootika@iitk.ac.in>, and 
-	Ning Dai <daixx224@umn.edu>
+	Dootika Vats <dootika@iitk.ac.in>, 
+	Ning Dai <daixx224@umn.edu>, and
+	Uttiya Maji.
 Maintainer: Dootika Vats <dootika@iitk.ac.in>
-Imports: utils, ellipse, Rcpp (>= 0.12.10)
+Imports: utils, ellipse, Rcpp (>= 0.12.10), fftwtools
 LinkingTo: Rcpp, RcppArmadillo
 Suggests: mAr, knitr
 Description: Provides tools for computing Monte Carlo standard
