--- a/AR_methods/.gitattributes
+++ b/AR_methods/.gitattributes
@@ -1,1 +1,2 @@
 batchsize_constant_compare_cache/** filter=lfs diff=lfs merge=lfs -text
+batchsize_constant_compare_cache/. filter=lfs diff=lfs merge=lfs -text
