--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -5,7 +5,8 @@ Title: Monte Carlo Standard Errors for MCMC
 Author: James M. Flegal <jflegal@ucr.edu>, 
 	John Hughes <j.hughes@ucdenver.edu>, 
 	Dootika Vats <dootika@iitk.ac.in>, 
-	Ning Dai <daixx224@umn.edu>, and
+	Ning Dai <daixx224@umn.edu>, 
+	Kushagra Gupta <kushagra.gpt99@gmail.com> and
 	Uttiya Maji.
 Maintainer: Dootika Vats <dootika@iitk.ac.in>
 Imports: utils, ellipse, Rcpp (>= 0.12.10), fftwtools
