--- a/NAMESPACE
+++ b/NAMESPACE
@@ -26,4 +26,5 @@ export(mcse)
 export(BVN_Gibbs)
 export(is.mcmcse)
 
-S3method(confRegion, mcmcse)
+S3method(confRegion,default)
+S3method(confRegion,mcmcse)
