--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,12 +2,12 @@ Package: mcmcse
 Version: 1.5-0
 Date: 2021-08-23
 Title: Monte Carlo Standard Errors for MCMC
-Author: James M. Flegal <jflegal@ucr.edu>, 
-	John Hughes <j.hughes@ucdenver.edu>, 
-	Dootika Vats <dootika@iitk.ac.in>, 
-	Ning Dai <daixx224@umn.edu>, 
-	Kushagra Gupta <kushagra.gpt99@gmail.com> and
-	Uttiya Maji.
+Author: James M. Flegal <jflegal@ucr.edu>,
+		John Hughes <j.hughes@ucdenver.edu>,
+		Dootika Vats <dootika@iitk.ac.in>, 
+		Ning Dai <daixx224@umn.edu>,
+		Kushagra Gupta <kushagra.gpt99@gmail.com>, and
+		Uttiya Maji
 Maintainer: Dootika Vats <dootika@iitk.ac.in>
 Imports: utils, ellipse, Rcpp (>= 0.12.10), fftwtools, testthat
 LinkingTo: Rcpp, RcppArmadillo
