--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -3,10 +3,10 @@ Version: 1.5-0
 Date: 2021-08-23
 Title: Monte Carlo Standard Errors for MCMC
 Author: James M. Flegal <jflegal@ucr.edu>,
-		John Hughes <j.hughes@ucdenver.edu>,
+		John Hughes,
 		Dootika Vats <dootika@iitk.ac.in>, 
-		Ning Dai <daixx224@umn.edu>,
-		Kushagra Gupta <kushagra.gpt99@gmail.com>, and
+		Ning Dai,
+		Kushagra Gupta, and
 		Uttiya Maji
 Maintainer: Dootika Vats <dootika@iitk.ac.in>
 Imports: utils, ellipse, Rcpp (>= 0.12.10), fftwtools, testthat
